Bug 1765299 - Set fd resource limits correctly for child processes on Android. r=glandium

Differential Revision: https://phabricator.services.mozilla.com/D144380