toolkit/xre/nsAppRunner.h
@@ -145,6 +145,8 @@ namespace startup {
 Result<nsCOMPtr<nsIFile>, nsresult> GetIncompleteStartupFile(nsIFile* aProfLD);
 
 extern GeckoProcessType sChildProcessType;
+
+void IncreaseDescriptorLimits();
 }  // namespace startup
 
 const char* PlatformBuildID();
